Css modules migration - 8b: Tipseen (TipseenBasicContent, TipseenContent, TipseenImage, TipseenTitle, TipseenWizard)

--- a/src/components/Tipseen/Tipseen.module.scss
+++ b/src/components/Tipseen/Tipseen.module.scss
@@ -2,7 +2,7 @@
 @import "../../styles/typography";
 @import "../../styles/global-css-settings";
 
-:global(.monday-style-tooltip).tipseenWrapper {
+.tipseenWrapper {
   min-width: 100px;
   min-height: 40px;
   padding: 0;
