--- a/src/config/maps/themes/black/keys/_black-theme-keys.scss
+++ b/src/config/maps/themes/black/keys/_black-theme-keys.scss
@@ -35,6 +35,10 @@ $theme-black-keys: (
         shareable-color: $theme-black-shareable-color,
         ui-border-color: $theme-black-ui-border-color,
         layout-border-color: $theme-black-layout-border-color,
+        warning-color: $theme-black-warning-color,
+        warning-color-hover: $theme-black-warning-color-hover,
+        warning-color-select: $theme-black-warning-color-select,
+        warning-color-select-hover: $theme-black-warning-color-select-hover
 );
 
 // DARK THEME SHADOW MAP: dark theme's shadow color map.
