--- a/src/config/maps/themes/hacker/keys/_hacker-theme-keys.scss
+++ b/src/config/maps/themes/hacker/keys/_hacker-theme-keys.scss
@@ -35,6 +35,10 @@ $theme-hacker-keys: (
         shareable-color: $theme-hacker-shareable-color,
         ui-border-color: $theme-hacker-ui-border-color,
         layout-border-color: $theme-hacker-layout-border-color,
+        warning-color: $theme-hacker-warning-color,
+        warning-color-hover: $theme-hacker-warning-color-hover,
+        warning-color-select: $theme-hacker-warning-color-select,
+        warning-color-select-hover: $theme-hacker-warning-color-select-hover
 );
 
 
