--- a/src/config/tokens/themes/hacker/keys/_hacker-theme-keys.scss
+++ b/src/config/tokens/themes/hacker/keys/_hacker-theme-keys.scss
@@ -48,6 +48,10 @@ $theme-hacker-negative-color-selected: $color-maroon_red;
 $theme-hacker-negative-color-selected-hover: $color-amber_red;
 $theme-hacker-private-color: $private-color;
 $theme-hacker-shareable-color: $shareable-color;
+$theme-hacker-warning-color: $color-egg_yolk; // warning-colors
+$theme-hacker-warning-color-hover: $color-desert;
+$theme-hacker-warning-color-select: $color-brass;
+$theme-hacker-warning-color-select-hover: $color-aztec_gold;
 
 // UI elements
 // - Borders
