--- a/src/config/maps/themes/dark/keys/_dark-theme-keys.scss
+++ b/src/config/maps/themes/dark/keys/_dark-theme-keys.scss
@@ -37,6 +37,10 @@ $theme-dark-keys: (
         shareable-color: $theme-dark-shareable-color,
         ui-border-color: $theme-dark-ui-border-color,
         layout-border-color: $theme-dark-layout-border-color,
+        warning-color: $theme-dark-warning-color,
+        warning-color-hover: $theme-dark-warning-color-hover,
+        warning-color-select: $theme-dark-warning-color-select,
+        warning-color-select-hover: $theme-dark-warning-color-select-hover
 );
 
 
