--- a/src/config/tokens/themes/black/keys/_black-theme-keys.scss
+++ b/src/config/tokens/themes/black/keys/_black-theme-keys.scss
@@ -46,6 +46,10 @@ $theme-black-negative-color-selected: $color-maroon_red;
 $theme-black-negative-color-selected-hover: $color-amber_red;
 $theme-black-private-color: $private-color;
 $theme-black-shareable-color: $shareable-color;
+$theme-black-warning-color: $color-egg_yolk; // warning-colors
+$theme-black-warning-color-hover: $color-desert;
+$theme-black-warning-color-select: $color-brass;
+$theme-black-warning-color-select-hover: $color-aztec_gold;
 
 // UI elements
 // - Borders
