--- a/src/config/tokens/themes/dark/palette/_dark-theme-palette.scss
+++ b/src/config/tokens/themes/dark/palette/_dark-theme-palette.scss
@@ -15,6 +15,9 @@ $color-darker_green: #194733;
 $color-maroon_red: #642830;
 $color-amber_red: #5a2027;
 
+$color-brass: #bfa645; // Warning colors
+$color-aztec_gold: #b79c5c;
+
 // Natural / Gray
 $color-midnight: #181b34;
 $color-graphite: #30324e;
