--- a/src/config/maps/themes/basic/keys/_keys.scss
+++ b/src/config/maps/themes/basic/keys/_keys.scss
@@ -38,8 +38,8 @@ $theme-basic-keys: (
         layout-border-color: $layout-border-color,
         warning-color: $warning-color,
         warning-color-hover: $warning-color-hover,
-        warning-color-select: $warning-color-select,
-        warning-color-select-hover: $warning-color-select-hover
+        warning-color-selected: $warning-color-selected,
+        warning-color-selected-hover: $warning-color-selected-hover
 );
 
 // ## BASIC THEME SHADOW MAP: basic theme's shadow color map.
