--- a/src/config/maps/themes/black/keys/_black-theme-keys.scss
+++ b/src/config/maps/themes/black/keys/_black-theme-keys.scss
@@ -37,8 +37,8 @@ $theme-black-keys: (
         layout-border-color: $theme-black-layout-border-color,
         warning-color: $theme-black-warning-color,
         warning-color-hover: $theme-black-warning-color-hover,
-        warning-color-select: $theme-black-warning-color-select,
-        warning-color-select-hover: $theme-black-warning-color-select-hover
+        warning-color-selected: $theme-black-warning-color-selected,
+        warning-color-selected-hover: $theme-black-warning-color-selected-hover
 );
 
 // DARK THEME SHADOW MAP: dark theme's shadow color map.
