--- a/src/config/tokens/themes/basic/keys/_keys.scss
+++ b/src/config/tokens/themes/basic/keys/_keys.scss
@@ -50,8 +50,8 @@ $private-color: $color-bazooka;
 $shareable-color: $color-purple;
 $warning-color: $color-egg_yolk;
 $warning-color-hover: $color-desert;
-$warning-color-select: $color-summer_sun;
-$warning-color-select-hover: $color-yellow_sand;
+$warning-color-selected: $color-summer_sun;
+$warning-color-selected-hover: $color-yellow_sand;
 
 // UI elements
 // - Borders
