--- a/src/components/BreadcrumbsBar/BreadcrumbsBar.module.scss
+++ b/src/components/BreadcrumbsBar/BreadcrumbsBar.module.scss
@@ -1,13 +1,13 @@
 @import "../../styles/themes";
 
-.breadcrumbsBarWrapper ol {
+.breadcrumbsBar ol {
   display: flex;
   flex-direction: row;
   align-items: center;
   white-space: nowrap;
 }
 
-.breadcrumbsBarWrapper ol .separatorIcon {
+.breadcrumbsBar ol .separatorIcon {
   @include theme-prop(color, secondary-text-color);
   flex-shrink: 0;
 }
