--- a/src/components/ButtonGroup/ButtonGroup.module.scss
+++ b/src/components/ButtonGroup/ButtonGroup.module.scss
@@ -2,7 +2,7 @@
 @import "../../styles/themes";
 @import "../../styles/typography";
 
-.wrapper {
+.buttonGroup {
   display: flex;
   flex-direction: column;
 }
