--- a/src/components/ColorPicker/ColorPicker.module.scss
+++ b/src/components/ColorPicker/ColorPicker.module.scss
@@ -1,6 +1,6 @@
 @import "../../styles/global-css-settings";
 
-.colorPickerWrapper.colorPickerDialogContent {
+.colorPicker.colorPickerDialogContent {
   z-index: 1;
   padding: $spacing-small-medium;
   display: flex;
