--- a/src/components/Combobox/Combobox.module.scss
+++ b/src/components/Combobox/Combobox.module.scss
@@ -2,7 +2,7 @@
 @import "../../styles/typography";
 @import "../../styles/states";
 
-.comboboxWrapper {
+.combobox {
   height: 100%;
   display: flex;
   flex-direction: column;
@@ -11,44 +11,44 @@
   margin-bottom: var(--spacing-small);
 }
 
-.comboboxWrapper .comboboxCategoryWithDivider {
+.combobox .comboboxCategoryWithDivider {
   margin-top: var(--spacing-medium);
 }
 
-.comboboxWrapper.stickyCategory .comboboxCategory {
+.combobox.stickyCategory .comboboxCategory {
   z-index: 10;
   background-color: var(--secondary-background-color);
 }
 
 /* Relative to Search height */
 
-.comboboxWrapper.stickyCategory.sizeSmall .comboboxCategory {
+.combobox.stickyCategory.sizeSmall .comboboxCategory {
   top: 32px;
 }
 
-.comboboxWrapper.stickyCategory.sizeMedium .comboboxCategory {
+.combobox.stickyCategory.sizeMedium .comboboxCategory {
   top: 40px;
 }
 
-.comboboxWrapper.stickyCategory.sizeLarge .comboboxCategory {
+.combobox.stickyCategory.sizeLarge .comboboxCategory {
   top: 48px;
 }
 
-.comboboxWrapper.empty {
+.combobox.empty {
   max-height: 200px;
 }
 
-.comboboxWrapperSearchWrapper {
+.comboboxSearchWrapper {
   position: sticky;
   top: 0;
   z-index: 12;
 }
 
-.comboboxWrapperSearch {
+.comboboxSearch {
   flex: 0 0 auto;
 }
 
-.comboboxWrapperNoResults {
+.comboboxNoResults {
   margin-top: var(--spacing-small);
   flex: 1 1 auto;
   height: calc(100% - 20px);
@@ -59,28 +59,28 @@
   flex-direction: column;
 }
 
-.comboboxWrapperNoResults .comboboxMessageWrapper {
+.comboboxNoResults .comboboxMessageWrapper {
   flex: 1 0 auto;
   display: flex;
   align-items: center;
   justify-content: center;
 }
 
-.comboboxWrapperNoResults .comboboxMessageWrapper .comboboxMessage {
+.comboboxNoResults .comboboxMessageWrapper .comboboxMessage {
   @include ellipsis();
 }
 
-.comboboxWrapperNoResults .addNewButton {
+.comboboxNoResults .addNewButton {
   flex: 0 0 auto;
   width: 100% !important;
   margin-bottom: 8px;
 }
 
-.comboboxWrapperNoResults .addNewButton .buttonLabel {
+.comboboxNoResults .addNewButton .buttonLabel {
   @include ellipsis();
 }
 
-.comboboxWrapperList {
+.comboboxList {
   display: flex;
   flex-direction: column;
   flex: 1 1 auto;
