--- a/src/components/AttentionBox/AttentionBox.scss
+++ b/src/components/AttentionBox/AttentionBox.scss
@@ -13,6 +13,7 @@
 
   &__title {
     margin: 0;
+    font-weight: 700;
   }
 
   &_text--compact {
@@ -28,43 +29,24 @@
     &-primary {
       @include theme-prop(color, primary-text-color);
       @include theme-prop(background-color, primary-selected-color);
-
-      &__title-container {
-        &__icon {
-          @include theme-prop(color, primary-color);
-        }
-      }
     }
 
     &-danger {
       @include theme-prop(background-color, negative-color-selected);
-
-      &__title-container {
-        &__icon {
-          @include theme-prop(color, negative-color);
-        }
-      }
     }
 
     &-success {
       @include theme-prop(background-color, positive-color-selected);
-
-      &__title-container {
-        &__icon {
-          @include theme-prop(color, positive-color);
-        }
-      }
     }
 
     &-dark {
       @include theme-prop(background-color, primary-background-hover-color);
       @include theme-prop(color, primary-text-color);
+    }
 
-      &__title-container {
-        &__icon {
-          @include theme-prop(color, primary-text-color);
-        }
-      }
+    &-warning {
+      @include theme-prop(background-color, warning-color-selected);
+      @include theme-prop(color, primary-text-color);
     }
   }
 
