--- a/src/components/AttentionBox/AttentionBox.module.scss
+++ b/src/components/AttentionBox/AttentionBox.module.scss
@@ -2,7 +2,7 @@
 @import "../../styles/typography";
 @import "../../styles/global-css-settings";
 
-.boxComponent {
+.attentionBox {
   position: relative;
   padding: var(--spacing-medium);
   border-radius: var(--border-radius-medium);
