--- a/src/components/Link/Link.module.scss
+++ b/src/components/Link/Link.module.scss
@@ -41,11 +41,11 @@
   .iconStart {
     line-height: 24px;
     margin-right: 0;
-    margin-inline-end: $spacing-small;
+    margin-inline-end: var(--spacing-xs);
   }
   .iconEnd {
     line-height: 24px;
     margin-left: 0;
-    margin-inline-start: $spacing-small;
+    margin-inline-start: var(--spacing-xs);
   }
 }
