--- a/src/config/maps/themes/dark/keys/_dark-theme-keys.scss
+++ b/src/config/maps/themes/dark/keys/_dark-theme-keys.scss
@@ -40,7 +40,11 @@ $theme-dark-keys: (
   warning-color: $theme-dark-warning-color,
   warning-color-hover: $theme-dark-warning-color-hover,
   warning-color-selected: $theme-dark-warning-color-selected,
-  warning-color-selected-hover: $theme-dark-warning-color-selected-hover
+  warning-color-selected-hover: $theme-dark-warning-color-selected-hover,
+  brand-color: $theme-dark-primary-color,
+  brand-hover-color: $theme-dark-primary-hover-color,
+  brand-selected-color: $theme-dark-primary-selected-color,
+  brand-selected-hover-color: $theme-dark-primary-selected-hover-color
 );
 
 // DARK THEME SHADOW MAP: dark theme's shadow color map.
