Button brand color

--- a/src/components/Button/Button.module.scss
+++ b/src/components/Button/Button.module.scss
@@ -135,10 +135,20 @@ $disabled-on-primary-color-opacity: 0.5;
   @include theme-prop(background, primary-color);
 }
 
+.kindPrimary.colorBrand {
+  background: var(--brand-color);
+}
+
 .kindPrimary.colorPrimaryActive,
 .kindPrimary.colorPrimary:hover,
 .kindPrimary.colorPrimary:focus {
   @include theme-prop(background, primary-hover-color);
+}
+
+.kindPrimary.colorBrandActive,
+.kindPrimary.colorBrand:hover,
+.kindPrimary.colorBrand:focus {
+  background: var(--brand-hover-color);
 }
 
 .kindPrimary.colorPositive {
@@ -210,6 +220,12 @@ $disabled-on-primary-color-opacity: 0.5;
   border-color: var(--primary-color);
 }
 
+.kindSecondary.colorBrandActive,
+.kindSecondary.colorBrandActive:hover {
+  background-color: var(--brand-selected-color);
+  border-color: var(--brand-color);
+}
+
 .kindSecondary.colorPrimary:hover:not(.colorPrimaryActive),
 .kindSecondary.colorPrimary:focus:not(.colorPrimaryActive) {
   @include theme-prop(background, primary-background-hover-color);
@@ -273,6 +289,11 @@ $disabled-on-primary-color-opacity: 0.5;
 .kindTertiary.colorPrimaryActive,
 .kindTertiary.colorPrimaryActive:hover {
   background-color: var(--primary-selected-color);
+}
+
+.kindTertiary.colorBrandActive,
+.kindTertiary.colorBrandActive:hover {
+  background-color: var(--brand-selected-color);
 }
 
 .kindTertiary.colorPrimary:hover:not(.colorPrimaryActive),
