Fix Button brand color text

--- a/src/components/Button/Button.scss
+++ b/src/components/Button/Button.scss
@@ -138,6 +138,7 @@ $disabled-on-primary-color-opacity: 0.5;
           }
           &-brand {
             background: var(--brand-color);
+            color: var(--text-color-on-inverted);
             &-active,
             &:hover,
             &:focus {
