--- a/src/config/maps/themes/basic/keys/_keys.scss
+++ b/src/config/maps/themes/basic/keys/_keys.scss
@@ -43,7 +43,8 @@ $theme-basic-keys: (
   brand-color: $primary-color,
   brand-hover-color: $primary-hover-color,
   brand-selected-color: $primary-selected-color,
-  brand-selected-hover-color: $primary-selected-hover-color
+  brand-selected-hover-color: $primary-selected-hover-color,
+  text-color-on-brand: $text-color-on-primary
 );
 
 // ## BASIC THEME SHADOW MAP: basic theme's shadow color map.
