--- a/src/components/Button/Button.scss
+++ b/src/components/Button/Button.scss
@@ -138,7 +138,7 @@ $disabled-on-primary-color-opacity: 0.5;
           }
           &-brand {
             background: var(--brand-color);
-            color: var(--text-color-on-inverted);
+            color: var(--text-color-on-brand);
             &-active,
             &:hover,
             &:focus {
@@ -217,6 +217,7 @@ $disabled-on-primary-color-opacity: 0.5;
             }
           }
           &-brand {
+            color: var(--text-color-on-brand);
             &-active,
             &-active:hover {
               background-color: var(--brand-selected-color);
@@ -288,6 +289,7 @@ $disabled-on-primary-color-opacity: 0.5;
             }
           }
           &-brand {
+            color: var(--text-color-on-brand);
             &-active,
             &-active:hover {
               background-color: var(--brand-selected-color);
