--- a/src/components/ProgressBars/LinearProgressBar/LinearProgressBar.module.scss
+++ b/src/components/ProgressBars/LinearProgressBar/LinearProgressBar.module.scss
@@ -10,6 +10,16 @@
   font-family: var(--font-family);
   font-size: var(--font-size-general-label);
   @include theme-prop(color, secondary-text-color);
+
+  &.fullWidth {
+    width: 100%;
+    .container {
+      border-radius: 0;
+      .progressBar {
+        border-radius: 0 var(--border-radius-small) var(--border-radius-small) 0;
+      }
+    }
+  }
 }
 
 .label {
