--- a/src/components/ProgressBars/LinearProgressBar/LinearProgressBar.module.scss
+++ b/src/components/ProgressBars/LinearProgressBar/LinearProgressBar.module.scss
@@ -17,6 +17,10 @@
       border-radius: 0;
       .progressBar {
         border-radius: 0 var(--border-radius-small) var(--border-radius-small) 0;
+
+        &.completed {
+          border-radius: 0;
+        }
       }
     }
   }
