Test variable override

--- a/src/general.scss
+++ b/src/general.scss
@@ -7,3 +7,8 @@
 .dark-app-theme {
   --theme-box-shadow: 245, 246, 248;
 }
+
+// TODO just for test - remove afterwards
+:root {
+  --motion-productive-short: 7000ms;
+}
