--- a/src/components/Skeleton/Skeleton.scss
+++ b/src/components/Skeleton/Skeleton.scss
@@ -4,76 +4,87 @@
 
 @mixin shine-animation() {
   overflow: hidden;
-  &::before {
-    display: inline-block;
-    content:"";
-    opacity: 0.1;
-    background-image: linear-gradient(90deg, transparent 0%, var(--placeholder-color) 30%, var(--placeholder-color) 70%, transparent 100%);
-    width: 300%;
-    height: 300%;
-    margin-bottom: 20px;
-    animation-duration: 1.2s;
-    animation-fill-mode: forwards;
-    animation-iteration-count: infinite;
-    animation-name: shine;
-    animation-timing-function: var(--motion-timing-enter);
-  }
+  animation-duration: 0.8s;
+  animation-direction: alternate;
+  animation-iteration-count: infinite;
+  animation-name: shine;
+  animation-timing-function: steps(10,end);
 
   @keyframes shine {
     0% {
-      transform: translateX(-100%);
-    }
-    50% {
-      transform: translateX(100%);
+      opacity: 0.3;
     }
     100% {
-      transform: translateX(100%);
+      opacity: 1;
     }
   }
 }
 
 @mixin skeleton($radius: $border-radius-small) {
-  @include theme-prop(background, disabled-background-color); // should be replaced with all grey color
+  @include theme-prop(background, primary-background-hover-color);
   border-radius: $radius;
   @include shine-animation;
-
 }
 
-.monday-style-skeleton {
+.skeleton {
   display: flex;
+}
 
-  &_rectangle {
-    height: $rectangle-default-size;
-    @include skeleton;
+.rectangle {
+  height: $rectangle-default-size;
+  @include skeleton;
+}
+
+.circle {
+  height: $circle-default-size;
+  @include skeleton($circle-radius);
+}
+
+.text {
+  @include skeleton;
+}
+
+.textH1 {
+  height: $h1-empty-state-height;
+}
+
+.textH2 {
+  height: $h2-empty-state-height;
+}
+
+.textH3 {
+  height: $h3-empty-state-height;
+}
+
+.textH4 {
+  height: $h4-empty-state-height;
+}
+
+.textH5 {
+  height: $h5-empty-state-height;
+}
+
+.textH6 {
+  height: $h6-empty-state-height;
+}
+
+.textSmall,
+.textCustom {
+  height: $small-empty-state-height;
+}
+
+.fullWidth {
+  width: 100%;
+}
+
+.skeleton:not(.fullWidth) {
+  .text {
+    width: 162px;
   }
-
-  &_circle {
-    height: $circle-default-size;
-    @include skeleton($circle-radius);
+  .circle {
+    width: $circle-default-size;
   }
-
-  &_text {
-    @include skeleton;
-    &--h1 {
-      height: $h1-empty-state-height
-    }
-    &--h2 {
-      height: $h2-empty-state-height;
-    }
-    &--h3 {
-      height: $h3-empty-state-height;
-    }
-    &--h4 {
-      height: $h4-empty-state-height;
-    }
-    &--h5 {
-      height: $h5-empty-state-height;
-    }
-    &--h6 {
-      height: $h6-empty-state-height;
-    }
-    &--small, &--custom {
-      height: $small-empty-state-height;
-    }
+  .rectangle {
+    width: $rectangle-default-size;
   }
 }
